--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
 		"Other"
 	],
 	"activationEvents": [
-		"onCommand:extension.helloWorld"
+		"onCommand:extension.copyFullQualifiedClassName"
 	],
 	"main": "./extension.js",
 	"contributes": {
 		"commands": [
 			{
-				"command": "extension.helloWorld",
-				"title": "Hello World"
+				"command": "extension.copyFullQualifiedClassName",
+				"title": "Ruby - Copy full qualified class name"
 			}
     ],
     "keybindings": [
       {
-        "command": "extension.helloWorld",
+        "command": "extension.copyFullQualifiedClassName",
         "key" : "ctrl+k ctrl+c",
         "mac": "cmd+k cmd+c",
         "when": "editorTextFocus && editorLangId == ruby"
